# xhec-mlops-2025-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.app  Dockerfile.backend  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
models/: encoders.joblib  feature_scaler.joblib  linear_regression_model.pkl  model.pkl  scaler.pkl  training_info.joblib
notebooks/: eda.ipynb  modelling.ipynb  modelling_OLD.ipynb  sofia_eda.ipynb  sofia_modeling.ipynb
sample_data/: abalone_sample.csv
src/modelling/: config.py  deploy.py  main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: app_config.py  main.py  utils.py
src/web_service/lib/: inference.py  modelling.py  models.py
