[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = []


[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Augustin Naton", email = "augustin.naton@gmail.com" },
  { name = "Louis Peretie", email = "lperetie@gmail.com" },
  { name = "Gregoire Bidault", email = "gregoire.bidault@hec.edu"},
  { name = "Gustave Triomphe", email = "gustave.triomphe@gmail.com"},
  { name = "Sofia Casalini", email = "sofia.casalini@gmail.com"}
]
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mlflow>=3.5.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "kagglehub>=0.3.13",
    "loguru>=0.7.3",
    "prefect>=3.0.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
    "ipykernel>=7.0.1"
]


[tool.ruff]
line-length = 88
